deployment and servic file for aesthesia react app

--- a/aesthisia-demo/kubernetes/aesthisia-react-dep.yaml
+++ b/aesthisia-demo/kubernetes/aesthisia-react-dep.yaml
@@ -13,7 +13,8 @@ spec:
         app: aesthisia
     spec:
       containers:
-        name: aesthisia-react-app
-        image: abhaybajeta/aesthisia-react:1.2.0
-        ports: 
-        - containerPort: 3000
+        - name: aesthisia-react-app
+          image: abhaybajeta/aesthisia-react:1.2.0
+          ports:
+            - containerPort: 3000
+
