deployment and servic file for aesthesia react app

--- a/aesthisia-demo/kubernetes/aesthisia-react-svc.yaml
+++ b/aesthisia-demo/kubernetes/aesthisia-react-svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: aesthisa-react-svc
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: aesthisia
   ports:
