--- a/aesthisia-demo/kubernetes/aesthisia-react-svc.yaml
+++ b/aesthisia-demo/kubernetes/aesthisia-react-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: aesthisa-react-svc
+  namespace: aesthisia-react
 spec:
   type: LoadBalancer
   selector:
