--- a/aesthisia-demo/kubernetes/ingress.yaml
+++ b/aesthisia-demo/kubernetes/ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/rewrite-target: nginx
 spec:
   rules:
-    - host: react.aesthisia.in
+    - host: aesthisia.mydevopslearn.xyz
     - http:
         paths:
           - path: /
