--- a/aesthisia-demo/kubernetes/aesthisia-react-svc.yaml
+++ b/aesthisia-demo/kubernetes/aesthisia-react-svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: aesthisa-react-svc
+  name: aesthisa-svc
   namespace: aesthisia-react
 spec:
   type: NodePort
