--- a/aesthisia-demo/kubernetes/aesthisia-react-dep.yaml
+++ b/aesthisia-demo/kubernetes/aesthisia-react-dep.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: aesthisia-react-dep
-  namespace: aesthisia-react
+  namespace: aesthisia
 spec:
   selector:
     matchLabels:
