--- a/aesthisia-demo/kubernetes/aesthisia-react-svc2.yaml
+++ b/aesthisia-demo/kubernetes/aesthisia-react-svc2.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: aesthisa-react-svc
-  namespace: aesthisia-react
+  namespace: aesthisia
 spec:
   type: LoadBalancer
   selector:
