deployment, ingress and servic file for aesthesia react app

--- a/aesthisia-demo/kubernetes/ingress.yaml
+++ b/aesthisia-demo/kubernetes/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: aesthisia-ingress
-  namespace: aesthisia-react
+  namespace: aesthisia
   annotations:
     kubernetes.io/rewrite-target: nginx
 spec:
