deployment, ingress and servic file for aesthesia react app

--- a/aesthisia-demo/kubernetes/ingress.yaml
+++ b/aesthisia-demo/kubernetes/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     kubernetes.io/rewrite-target: nginx
 spec:
+  IngressClassName: nginx
   rules:
     - host: aesthisia.mydevopslearn.xyz
     - http:
