deployment, ingress and servic file for aesthesia react app

--- a/aesthisia-demo/kubernetes/ingress.yaml
+++ b/aesthisia-demo/kubernetes/ingress.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-    - host: aesthisia.mydevopslearn.xyz
+    - host: react.aesthisia.in
     - http:
         paths:
           - path: /
