--- a/aesthisia-demo/kubernetes/ingress.yaml
+++ b/aesthisia-demo/kubernetes/ingress.yaml
@@ -5,8 +5,13 @@ metadata:
   namespace: aesthisia
   annotations:
     kubernetes.io/rewrite-target: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-prod
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - react.aesthisia.in
+        secretName: aesthisia-ingress-tls
   rules:
     - host: react.aesthisia.in
     - http:
